--- a/Pymaceuticals_Solution.ipynb
+++ b/Pymaceuticals_Solution.ipynb
@@ -9,7 +9,11 @@
     "\n",
     "### Analysis\n",
     "\n",
-    "- Add your analysis here.\n",
+    "- Add your analysis here. 3 Observations:\n",
+    "\n",
+    "1. Ketapril has the largest mean tumor volume (55.235638) of all drug regimens in this study.\n",
+    "2. Capomulin has the most number of rows based on the Mouse ID and Timepoint per drug regimen.\n",
+    "3. The male mice have a slightly higher distribution than female mice based on their percentage.\n",
     " "
    ]
   },
